<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:padding="@dimen/padding_xl"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/news_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_marginStart="@dimen/margin"
            android:layout_width="@dimen/main_menu_icon"
            android:layout_height="@dimen/main_menu_icon"
            android:src="@drawable/news_button"/>

        <TextView
            android:id="@+id/news"
            android:layout_marginEnd="@dimen/margin_xl"
            style="@style/MainMenuStyle"
            android:text="@string/section_news"
            android:textSize="@dimen/font_size_xl"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/film_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_marginStart="@dimen/margin"
            android:layout_width="@dimen/main_menu_icon"
            android:layout_height="@dimen/main_menu_icon"
            android:src="@drawable/film_button"/>

        <TextView
            android:id="@+id/film"
            android:layout_marginEnd="@dimen/margin_xl"
            style="@style/MainMenuStyle"
            android:text="@string/section_film"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_xl" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sport_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="@dimen/main_menu_icon"
            android:layout_height="@dimen/main_menu_icon"
            android:layout_marginStart="@dimen/margin"
            android:src="@drawable/sport_button" />

        <TextView
            android:id="@+id/sport"
            android:layout_marginEnd="@dimen/margin_xl"
            style="@style/MainMenuStyle"
            android:text="@string/section_sport"
            android:textSize="@dimen/font_size_xl"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/culture_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_marginStart="@dimen/margin"
            android:layout_width="@dimen/main_menu_icon"
            android:layout_height="@dimen/main_menu_icon"
            android:src="@drawable/culture_button"/>

        <TextView
            android:id="@+id/culture"
            android:layout_marginEnd="@dimen/margin_xl"
            style="@style/MainMenuStyle"
            android:text="@string/section_culture"
            android:textSize="@dimen/font_size_xl"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lifestyle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_marginStart="@dimen/margin"
            android:layout_width="@dimen/main_menu_icon"
            android:layout_height="@dimen/main_menu_icon"
            android:src="@drawable/lifestyle_button"/>

        <TextView
            android:id="@+id/lifestyle"
            android:layout_marginEnd="@dimen/margin_xl"
            style="@style/MainMenuStyle"
            android:text="@string/section_lifestyle"
            android:textSize="@dimen/font_size_xl"
            android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>
